docs/7.53/md/abenabap_managed_db_objects.md
---
title: "ABAP-Managed Database Objects"
description: |
  By default, an AS ABAP(https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abensap_nw_abap_glosry.htm 'Glossary Entry') operates with data saved in the ABAP database schema(https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_db_schema_glosry.htm 'Glossary Entry') in its s
version: "7.53"
category: "database"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_managed_db_objects.htm"
abapFile: "abenabap_managed_db_objects.htm"
keywords: ["do", "try", "data", "abenabap", "managed", "objects"]
---

* * *

AS ABAP Release 753, ©Copyright 2019 SAP AG. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap.htm) →  [ABAP − Reference](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_sql.htm) → 

ABAP-Managed Database Objects

By default, an [AS ABAP](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abensap_nw_abap_glosry.htm "Glossary Entry") operates with data saved in the [ABAP database schema](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_db_schema_glosry.htm "Glossary Entry") in its [standard database](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenstandard_db_glosry.htm "Glossary Entry"). The schema can be accessed using a [standard connection](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenstandard_db_connection_glosry.htm "Glossary Entry"). The [database objects](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_managed_db_object_glosry.htm "Glossary Entry") used to save and access AS ABAP data in ABAP programs, such as [database tables](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abendatabase_table_glosry.htm "Glossary Entry"), [database views](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abendatabase_view_glosry.htm "Glossary Entry"), and [stored procedures](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenstored_procedure_glosry.htm "Glossary Entry"), are AS ABAP-managed objects. The associated AS ABAP tools and frameworks, such as [ABAP Dictionary](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_dictionary_glosry.htm "Glossary Entry"), [ABAP CDS](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_cds_glosry.htm "Glossary Entry"), and [AMDP](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenamdp_glosry.htm "Glossary Entry"), are used to create and edit the database objects and they are not created as native objects in the development environment of the database platform.

-   [Overview of ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_managed_db_objects_oview.htm)

-   [Access to ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_managed_db_objects_access.htm)

-   [Rules for Accessing ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abendatabase_access_recomm.htm)

Continue
[Overview of ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_managed_db_objects_oview.htm)
[Access to ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_managed_db_objects_access.htm)
[Rules for Accessing ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abendatabase_access_recomm.htm)