docs/7.57/md/abenabap_managed_db_objects.md
---
title: "ABAP-Managed Database Objects"
description: |
  By default, an AS ABAP(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenas_abap_glosry.htm 'Glossary Entry') operates with data stored in the ABAP database schema(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_db_schema_glosry.htm 'Glossary Entry') in its stan
version: "7.57"
category: "database"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_managed_db_objects.htm"
abapFile: "abenabap_managed_db_objects.htm"
keywords: ["do", "if", "try", "data", "abenabap", "managed", "objects"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendb_access.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP-Managed Database Objects, ABENABAP_MANAGED_DB_OBJECTS, 757%0D%0A%0D%0AError:%0D%
0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

ABAP-Managed Database Objects

By default, an [AS ABAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenas_abap_glosry.htm "Glossary Entry") operates with data stored in the [ABAP database schema](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_db_schema_glosry.htm "Glossary Entry") in its [standard database](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstandard_db_glosry.htm "Glossary Entry"). The schema can be accessed using a [standard connection](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstandard_db_connection_glosry.htm "Glossary Entry"). The [database objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_managed_db_object_glosry.htm "Glossary Entry") used to store and access AS ABAP data in ABAP programs, that is, [DDIC database tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_db_table_glosry.htm "Glossary Entry"), [DDIC database views](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendatabase_view_glosry.htm "Glossary Entry") and [stored procedures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstored_procedure_glosry.htm "Glossary Entry"), are AS ABAP-managed objects. The database objects are not created and maintained as native objects in the development environment of the database platform itself. Instead, they are created and maintained using the associated AS ABAP tools and frameworks, such as the [ABAP Dictionary](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dictionary_glosry.htm "Glossary Entry"), [ABAP CDS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_cds_glosry.htm "Glossary Entry"), and [AMDP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_glosry.htm "Glossary Entry").

-   [Overview of ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_managed_db_objects_oview.htm)
-   [Access to ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_managed_db_objects_access.htm)
-   [Rules for Accessing ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendatabase_access_recomm.htm)

Continue
[Overview of ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_managed_db_objects_oview.htm)
[Access to ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_managed_db_objects_access.htm)
[Rules for Accessing ABAP-Managed Database Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendatabase_access_recomm.htm)